# mle-training

./: .gitignore  README.md  env.yml  nonstandardcode.py  pyproject.toml
.ipynb_checkpoints/: env-checkpoint.yml  setup-checkpoint.py
docs/source/: api_documentation.rst  conf.py  index.rst  ingest_data.rst  lib_api.rst  project_overview.rst  score.rst  train.rst
notebooks/: housing.ipynb
notebooks/.ipynb_checkpoints/: housing-checkpoint.ipynb
src/: ingest_data.py  score.py  train.py
src/mle_lib/: api.py  config.py  defaults.py  utils.py
src/mle_lib/.ipynb_checkpoints/: logger-checkpoint.py
tests/unit_tests/: basic.py
